Switch to rsync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to DreamHost via SFTP
+name: 🚀 Deploy to DreamHost
 
 on:
   push:
@@ -10,18 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Upload files via SFTP to DreamHost
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: iad1-shared-b8-23.dreamhost.com
-          username: dh_c7z8d3
-          password: ${{ secrets.DREAMHOST_PASSWORD }}
-          protocol: sftp
-          port: 22
-          local_dir: .
-          remote_dir: /home/dh_c7z8d3
-          passive: true
-          delete: false
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.7.0
+      with:
+        ssh-private-key: ${{ secrets.DREAMHOST_SSH_KEY }}
+
+    - name: Upload via rsync over SSH
+      run: |
+        rsync -avz --delete --exclude '.git*' ./ \
+        ${{ secrets.DREAMHOST_USERNAME }}@${{ secrets.DREAMHOST_HOST }}:${{ secrets.DREAMHOST_REMOTE_PATH }}
