--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,8 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.DREAMHOST_SSH_KEY }}
 
-   - name: Upload via rsync over SSH
-  run: |
-    mkdir -p ~/.ssh
-    echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-    rsync -avz --delete --exclude '.git*' ./ \
-      "$DREAMHOST_USERNAME@$DREAMHOST_HOST:$DREAMHOST_REMOTE_PATH"
+    - name: Upload via rsync over SSH
+      run: |
+        mkdir -p ~/.ssh
+        ssh-keyscan -t ed25519 ${{ secrets.DREAMHOST_SSH_HOST }} >> ~/.ssh/known_hosts
+        rsync -avz --delete --exclude '.git*' ./ dh_c7z8d3@${{ secrets.DREAMHOST_SSH_HOST }}:/home/dh_c7z8d3/jamesbrownv.com/
