--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         ssh-keyscan -t ed25519 ${{ secrets.DREAMHOST_SSH_HOST }} >> ~/.ssh/known_hosts
-        rsync -avz --delete --exclude '.git*' ./ dh_c7z8d3@${{ secrets.DREAMHOST_SSH_HOST }}:/home/dh_c7z8d3/jamesbrownv.com/
+        rsync -avz --delete --exclude '.git*' ./_site/ dh_c7z8d3@${{ secrets.DREAMHOST_SSH_HOST }}:/home/dh_c7z8d3/jamesbrownv.com/blog/
